update adding exercise