@@ -17,44 +17,70 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class WorkoutServiceImpl implements WorkoutService {
 
     private final WorkoutRepository workoutRepository;
     private final UserRepository userRepository;
     private final ExerciseRepository exerciseRepository;
-    private final WorkoutExerciseMapper workoutExerciseMapper;
     private final WorkoutMapper workoutMapper;
+    private final WorkoutExerciseMapper workoutExerciseMapper;
 
     @Override
     public void createWorkout(Workout workout) {
-        UserEntity userEntity = userRepository.findById(workout.getUserId())
-                .orElseThrow(() -> new UserNotFoundException("User not found with id: " + workout.getUserId()));
 
-        WorkoutEntity workoutEntity = workoutMapper.toWorkoutEntity(workout, userEntity);
+        UserEntity user = userRepository.findById(workout.getUserId())
+                .orElseThrow(() -> new UserNotFoundException(
+                        "User not found with id: " + workout.getUserId()));
 
-        List<WorkoutExerciseEntity> workoutExercises = workout.getExercises().stream()
-                .map(we -> {
-                    WorkoutExerciseEntity entity = workoutExerciseMapper.toWorkoutExerciseEntity(we);
+        WorkoutEntity workoutEntity = workoutMapper.toWorkoutEntity(workout, user);
 
-                    ExerciseEntity exerciseEntity = null;
-                    if (we.getExerciseId() != null) {
-                        exerciseEntity = exerciseRepository.findById(we.getExerciseId())
-                                .orElseThrow(() -> new RuntimeException("Exercise not found with id: " + we.getExerciseId()));
-                    } else if (we.getExercise() != null) {
-                        exerciseEntity = workoutExerciseMapper.toExerciseEntity(we.getExercise());
-                        exerciseRepository.save(exerciseEntity);
-                    } else {
-                        throw new RuntimeException("Exercise information is missing.");
-                    }
+        List<WorkoutExerciseEntity> exercises = workout.getExercises()
+                .stream()
+                .map(we -> mapWorkoutExercise(we, workoutEntity))
+                .toList();
 
-                    entity.setWorkout(workoutEntity);
-                    entity.setExercise(exerciseEntity);
-                    return entity;
-                }).collect(Collectors.toList());
-
-        workoutEntity.setWorkoutExercises(workoutExercises);
+        workoutEntity.setExercises(exercises);
 
         workoutRepository.save(workoutEntity);
+    }
+
+    @Override
+    public void updateWorkout(Workout workout) {
+
+        WorkoutEntity workoutEntity = workoutRepository.findById(workout.getId())
+                .orElseThrow(() -> new RuntimeException(
+                        "Workout not found with id: " + workout.getId()));
+
+        workoutEntity.setName(workout.getName());
+        workoutEntity.setDate(workout.getDate());
+        workoutEntity.setNote(workout.getNote());
+        workoutEntity.setWorkoutType(workout.getType());
+
+        workoutEntity.getExercises().clear();
+
+        List<WorkoutExerciseEntity> updatedExercises = workout.getExercises()
+                .stream()
+                .map(we -> mapWorkoutExercise(we, workoutEntity))
+                .toList();
+
+        workoutEntity.getExercises().addAll(updatedExercises);
+    }
+
+    private WorkoutExerciseEntity mapWorkoutExercise(
+            com.vadim.tkach.gym_tracker.service.model.WorkoutExercise we,
+            WorkoutEntity workoutEntity
+    ) {
+        WorkoutExerciseEntity entity = workoutExerciseMapper.toWorkoutExerciseEntity(we);
+
+        ExerciseEntity exercise = exerciseRepository.findById(we.getExerciseId())
+                .orElseThrow(() -> new RuntimeException(
+                        "Exercise not found with id: " + we.getExerciseId()));
+
+        entity.setWorkout(workoutEntity);
+        entity.setExercise(exercise);
+
+        return entity;
     }
 
     @Override
@@ -62,60 +88,18 @@ public class WorkoutServiceImpl implements WorkoutService {
         return workoutRepository.findAll()
                 .stream()
                 .map(workoutMapper::toWorkout)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Workout getWorkoutById(UUID id) {
-        WorkoutEntity entity = workoutRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Workout not found with id: " + id));
-        return workoutMapper.toWorkout(entity);
-    }
-
-    @Override
-    @Transactional
-    public void updateWorkout(Workout workout) {
-        WorkoutEntity workoutEntity = workoutRepository.findById(workout.getId())
-                .orElseThrow(() -> new RuntimeException("Workout not found with id: " + workout.getId()));
-
-        workoutEntity.setName(workout.getName());
-        workoutEntity.setDate(workout.getDate());
-        workoutEntity.setNote(workout.getNote());
-        workoutEntity.setWorkoutType(workout.getType());
-
-        workoutEntity.getWorkoutExercises().clear();
-
-        List<WorkoutExerciseEntity> updatedExercises = workout.getExercises().stream()
-                .map(we -> {
-                    WorkoutExerciseEntity entity = workoutExerciseMapper.toWorkoutExerciseEntity(we);
-
-                    ExerciseEntity exerciseEntity = null;
-                    if (we.getExerciseId() != null) {
-                        exerciseEntity = exerciseRepository.findById(we.getExerciseId())
-                                .orElseThrow(() -> new RuntimeException("Exercise not found with id: " + we.getExerciseId()));
-                    } else if (we.getExercise() != null) {
-                        exerciseEntity = workoutExerciseMapper.toExerciseEntity(we.getExercise());
-                        exerciseRepository.save(exerciseEntity);
-                    } else {
-                        throw new RuntimeException("Exercise information is missing.");
-                    }
-
-                    entity.setWorkout(workoutEntity);
-                    entity.setExercise(exerciseEntity);
-                    return entity;
-                })
-                .collect(Collectors.toList());
-
-        workoutEntity.setWorkoutExercises(updatedExercises);
-
-        workoutRepository.save(workoutEntity);
+        return workoutRepository.findById(id)
+                .map(workoutMapper::toWorkout)
+                .orElseThrow(() -> new RuntimeException("Workout not found: " + id));
     }
 
     @Override
     public void deleteWorkout(UUID id) {
-        if (!workoutRepository.existsById(id)) {
-            throw new RuntimeException("Workout not found with id: " + id);
-        }
         workoutRepository.deleteById(id);
     }
 
@@ -126,5 +110,4 @@ public class WorkoutServiceImpl implements WorkoutService {
                 .map(workoutMapper::toWorkout)
                 .toList();
     }
-
 }
